# amazonka-personalize

./: README.md
amazonka-personalize/: README.md  amazonka-personalize.cabal
amazonka-personalize-events/: README.md  amazonka-personalize-events.cabal
amazonka-personalize-events/test/: Main.hs
amazonka-personalize-events/test/Test/AWS/: AmazonPersonalizeEvents.hs
amazonka-personalize-events/test/Test/AWS/AmazonPersonalizeEvents/: Internal.hs
amazonka-personalize-runtime/: README.md  amazonka-personalize-runtime.cabal
amazonka-personalize-runtime/test/: Main.hs
amazonka-personalize-runtime/test/Test/AWS/: AmazonPersonalizeRuntime.hs
amazonka-personalize-runtime/test/Test/AWS/AmazonPersonalizeRuntime/: Internal.hs
amazonka-personalize/test/: Main.hs
amazonka-personalize/test/Test/AWS/: AmazonPersonalize.hs
amazonka-personalize/test/Test/AWS/AmazonPersonalize/: Internal.hs
