name:                  amazonka-personalize
version:               1.6.1
synopsis:              Amazon Personalize SDK.
homepage:              https://github.com/brendanhay/amazonka
bug-reports:           https://github.com/brendanhay/amazonka/issues
license:               MPL-2.0
license-file:          LICENSE
author:                Brendan Hay
maintainer:            Brendan Hay <brendan.g.hay+amazonka@gmail.com>
copyright:             Copyright (c) 2013-2018 Brendan Hay
category:              Network, AWS, Cloud, Distributed Computing
build-type:            Simple
cabal-version:         >= 1.10
extra-source-files:    README.md fixture/*.yaml fixture/*.proto src/.gitkeep
description:
    The types from this library are intended to be used with
    <http://hackage.haskell.org/package/amazonka amazonka>, which provides
    mechanisms for specifying AuthN/AuthZ information, sending requests,
    and receiving responses.
    .
    Lenses are used for constructing and manipulating types,
    due to the depth of nesting of AWS types and transparency regarding
    de/serialisation into more palatable Haskell values.
    The provided lenses should be compatible with any of the major lens libraries
    such as <http://hackage.haskell.org/package/lens lens> or
    <http://hackage.haskell.org/package/lens-family-core lens-family-core>.
    .
    See "Network.AWS.AmazonPersonalize" or <https://aws.amazon.com/documentation/ the AWS documentation>
    to get started.

source-repository head
    type:              git
    location:          git://github.com/brendanhay/amazonka.git
    subdir:            amazonka-personalize

library
    default-language:  Haskell2010
    hs-source-dirs:    src gen

    ghc-options:
        -Wall
        -fwarn-incomplete-uni-patterns
        -fwarn-incomplete-record-updates
        -funbox-strict-fields

    exposed-modules:
          Network.AWS.AmazonPersonalize
        , Network.AWS.AmazonPersonalize.CreateBatchInferenceJob
        , Network.AWS.AmazonPersonalize.CreateCampaign
        , Network.AWS.AmazonPersonalize.CreateDataset
        , Network.AWS.AmazonPersonalize.CreateDatasetGroup
        , Network.AWS.AmazonPersonalize.CreateDatasetImportJob
        , Network.AWS.AmazonPersonalize.CreateEventTracker
        , Network.AWS.AmazonPersonalize.CreateFilter
        , Network.AWS.AmazonPersonalize.CreateSchema
        , Network.AWS.AmazonPersonalize.CreateSolution
        , Network.AWS.AmazonPersonalize.CreateSolutionVersion
        , Network.AWS.AmazonPersonalize.DeleteCampaign
        , Network.AWS.AmazonPersonalize.DeleteDataset
        , Network.AWS.AmazonPersonalize.DeleteDatasetGroup
        , Network.AWS.AmazonPersonalize.DeleteEventTracker
        , Network.AWS.AmazonPersonalize.DeleteFilter
        , Network.AWS.AmazonPersonalize.DeleteSchema
        , Network.AWS.AmazonPersonalize.DeleteSolution
        , Network.AWS.AmazonPersonalize.DescribeAlgorithm
        , Network.AWS.AmazonPersonalize.DescribeBatchInferenceJob
        , Network.AWS.AmazonPersonalize.DescribeCampaign
        , Network.AWS.AmazonPersonalize.DescribeDataset
        , Network.AWS.AmazonPersonalize.DescribeDatasetGroup
        , Network.AWS.AmazonPersonalize.DescribeDatasetImportJob
        , Network.AWS.AmazonPersonalize.DescribeEventTracker
        , Network.AWS.AmazonPersonalize.DescribeFeatureTransformation
        , Network.AWS.AmazonPersonalize.DescribeFilter
        , Network.AWS.AmazonPersonalize.DescribeRecipe
        , Network.AWS.AmazonPersonalize.DescribeSchema
        , Network.AWS.AmazonPersonalize.DescribeSolution
        , Network.AWS.AmazonPersonalize.DescribeSolutionVersion
        , Network.AWS.AmazonPersonalize.GetSolutionMetrics
        , Network.AWS.AmazonPersonalize.ListBatchInferenceJobs
        , Network.AWS.AmazonPersonalize.ListCampaigns
        , Network.AWS.AmazonPersonalize.ListDatasetGroups
        , Network.AWS.AmazonPersonalize.ListDatasetImportJobs
        , Network.AWS.AmazonPersonalize.ListDatasets
        , Network.AWS.AmazonPersonalize.ListEventTrackers
        , Network.AWS.AmazonPersonalize.ListFilters
        , Network.AWS.AmazonPersonalize.ListRecipes
        , Network.AWS.AmazonPersonalize.ListSchemas
        , Network.AWS.AmazonPersonalize.ListSolutionVersions
        , Network.AWS.AmazonPersonalize.ListSolutions
        , Network.AWS.AmazonPersonalize.Types
        , Network.AWS.AmazonPersonalize.UpdateCampaign
        , Network.AWS.AmazonPersonalize.Waiters

    other-modules:
          Network.AWS.AmazonPersonalize.Types.Algorithm
        , Network.AWS.AmazonPersonalize.Types.AlgorithmImage
        , Network.AWS.AmazonPersonalize.Types.AutoMLConfig
        , Network.AWS.AmazonPersonalize.Types.AutoMLResult
        , Network.AWS.AmazonPersonalize.Types.BatchInferenceJob
        , Network.AWS.AmazonPersonalize.Types.BatchInferenceJobConfig
        , Network.AWS.AmazonPersonalize.Types.BatchInferenceJobInput
        , Network.AWS.AmazonPersonalize.Types.BatchInferenceJobOutput
        , Network.AWS.AmazonPersonalize.Types.BatchInferenceJobSummary
        , Network.AWS.AmazonPersonalize.Types.Campaign
        , Network.AWS.AmazonPersonalize.Types.CampaignConfig
        , Network.AWS.AmazonPersonalize.Types.CampaignSummary
        , Network.AWS.AmazonPersonalize.Types.CampaignUpdateSummary
        , Network.AWS.AmazonPersonalize.Types.CategoricalHyperParameterRange
        , Network.AWS.AmazonPersonalize.Types.ContinuousHyperParameterRange
        , Network.AWS.AmazonPersonalize.Types.DataSource
        , Network.AWS.AmazonPersonalize.Types.Dataset
        , Network.AWS.AmazonPersonalize.Types.DatasetGroup
        , Network.AWS.AmazonPersonalize.Types.DatasetGroupSummary
        , Network.AWS.AmazonPersonalize.Types.DatasetImportJob
        , Network.AWS.AmazonPersonalize.Types.DatasetImportJobSummary
        , Network.AWS.AmazonPersonalize.Types.DatasetSchema
        , Network.AWS.AmazonPersonalize.Types.DatasetSchemaSummary
        , Network.AWS.AmazonPersonalize.Types.DatasetSummary
        , Network.AWS.AmazonPersonalize.Types.DefaultCategoricalHyperParameterRange
        , Network.AWS.AmazonPersonalize.Types.DefaultContinuousHyperParameterRange
        , Network.AWS.AmazonPersonalize.Types.DefaultHyperParameterRanges
        , Network.AWS.AmazonPersonalize.Types.DefaultIntegerHyperParameterRange
        , Network.AWS.AmazonPersonalize.Types.EventTracker
        , Network.AWS.AmazonPersonalize.Types.EventTrackerSummary
        , Network.AWS.AmazonPersonalize.Types.FeatureTransformation
        , Network.AWS.AmazonPersonalize.Types.Filter
        , Network.AWS.AmazonPersonalize.Types.FilterSummary
        , Network.AWS.AmazonPersonalize.Types.HPOConfig
        , Network.AWS.AmazonPersonalize.Types.HPOObjective
        , Network.AWS.AmazonPersonalize.Types.HPOResourceConfig
        , Network.AWS.AmazonPersonalize.Types.HyperParameterRanges
        , Network.AWS.AmazonPersonalize.Types.IntegerHyperParameterRange
        , Network.AWS.AmazonPersonalize.Types.Recipe
        , Network.AWS.AmazonPersonalize.Types.RecipeProvider
        , Network.AWS.AmazonPersonalize.Types.RecipeSummary
        , Network.AWS.AmazonPersonalize.Types.S3DataConfig
        , Network.AWS.AmazonPersonalize.Types.Solution
        , Network.AWS.AmazonPersonalize.Types.SolutionConfig
        , Network.AWS.AmazonPersonalize.Types.SolutionSummary
        , Network.AWS.AmazonPersonalize.Types.SolutionVersion
        , Network.AWS.AmazonPersonalize.Types.SolutionVersionSummary
        , Network.AWS.AmazonPersonalize.Types.TrainingMode
        , Network.AWS.AmazonPersonalize.Types.TunedHPOParams

    build-depends:
          amazonka-core == 1.6.1.*
        , base          >= 4.7     && < 5

test-suite amazonka-personalize-test
    type:              exitcode-stdio-1.0
    default-language:  Haskell2010
    hs-source-dirs:    test
    main-is:           Main.hs

    ghc-options:       -Wall -threaded

    -- This section is encoded by the template and any modules added by
    -- hand outside these namespaces will not correctly be added to the
    -- distribution package.
    other-modules:
          Test.AWS.AmazonPersonalize
        , Test.AWS.Gen.AmazonPersonalize
        , Test.AWS.AmazonPersonalize.Internal

    build-depends:
          amazonka-core == 1.6.1.*
        , amazonka-test == 1.6.1.*
        , amazonka-personalize
        , base
        , bytestring
        , tasty
        , tasty-hunit
        , text
        , time
        , unordered-containers
